Melhorias testes